<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@color/category_movie"
    tools:context="com.mikeivan.apps.scatternotes.MovieAddActivity">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_white_18dp" />

    <!-- Layout for the editor -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Title field -->
        <EditText
            android:id="@+id/edit_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_movie_title"
            android:textColor="@android:color/white"
            android:inputType="textCapWords" />

        <!-- Year field -->
        <EditText
            android:id="@+id/edit_movie_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_movie_year"
            android:textColor="@android:color/white"
            android:inputType="number" />

        <!-- Rating category -->
        <LinearLayout
            android:id="@+id/container_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center"
                android:paddingRight="16dp"
                android:text="@string/category_rating" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Rating drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="8dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>

        <!-- Notes field -->
        <EditText
            android:layout_height="200dp"
            android:layout_width="200dp"
            android:id="@+id/edit_movie_notes"
            android:hint="@string/hint_movie_notes"
            android:textColor="@android:color/white"
            android:inputType="textCapSentences|textMultiLine" />


    </LinearLayout>

</RelativeLayout>

