<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_beer_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/category_beer"
    tools:context="com.mikeivan.apps.scatternotes.BeerSearchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <EditText
            android:id="@+id/search_beer_company"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_beer_company"
            android:textColor="@android:color/white"
            android:inputType="text" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_search_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/search_beer_company"
            android:src="@drawable/ic_search_white_18dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <EditText
            android:id="@+id/search_beer_product"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_beer_product"
            android:textColor="@android:color/white"
            android:inputType="text" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_search_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/search_beer_product"
            android:src="@drawable/ic_search_white_18dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/container_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center"
                android:paddingRight="16dp"
                android:text="@string/category_rating" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Rating drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="8dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_search_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/spinner_rating"
                android:src="@drawable/ic_search_white_18dp" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <EditText
            android:id="@+id/search_beer_notes"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_beer_notes"
            android:textColor="@android:color/white"
            android:inputType="text" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_search_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/search_beer_notes"
            android:src="@drawable/ic_search_white_18dp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <EditText
            android:id="@+id/search_beer_all"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_search_all"
            android:textColor="@android:color/white"
            android:inputType="text" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_search_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/search_beer_all"
            android:src="@drawable/ic_search_white_18dp" />
    </RelativeLayout>

</LinearLayout>
